--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -37,10 +37,10 @@
   --text-white: #fff8f0;
 
   /* Backgrounds - Warm dark */
-  --background-beige: #1a1715;
-  --background-light: #211e1b;
-  --background-white: #282420;
-  --background-cream: #302b26;
+  --background-beige: #272320;
+  --background-light: #2e2a26;
+  --background-white: #35302b;
+  --background-cream: #3c3631;
 
   /* Terminal / code theme - Warm tint */
   --terminal-bg: #1c1917;
